--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,11 @@
 PORT=4000
 
-# MySQL
-DB_HOST=localhost
+# MySQL (Railway)
+DB_HOST=hopper.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=facturador_db
+DB_PASSWORD=ufYyzVnOmBVKBbwDpHspNPOUlzwRLNlU
+DB_NAME=railway
+DB_PORT=48456
 
 # SUNAT BETA (Ambiente de Pruebas)
 SUNAT_MODE=beta
