--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,6 @@ SUNAT_CERT_PASS=123456
 
 # Modo desarrollo (genera PDF sin enviar a SUNAT)
 MODO_DESARROLLO=false
+APISPERU_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6Imp2YXNxdWV6dDVAdXBhby5lZHUucGUifQ.gAazoyHlriXsqHNMPKnwe5MLA8s3f45If3nWscL_uNs
+
+
