--- a/backend/.env
+++ b/backend/.env
@@ -3,9 +3,9 @@ PORT=4000
 # MySQL (Railway)
 DB_HOST=hopper.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=ufYyzVnOmBVKBbwDpHspNPOUlzwRLNlU
-DB_NAME=railway
-DB_PORT=48456
+DB_PASSWORD=CdsUaWLlernoPGVAFHKnpUWmwWblxTYm
+DB_NAME=railway1
+DB_PORT=58825
 
 # SUNAT BETA (Ambiente de Pruebas)
 SUNAT_MODE=beta
