--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ PORT=4000
 DB_HOST=hopper.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=CdsUaWLlernoPGVAFHKnpUWmwWblxTYm
-DB_NAME=railway1
+DB_NAME=railway
 DB_PORT=58825
 
 # SUNAT BETA (Ambiente de Pruebas)
