--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "jspdf": "^3.0.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
